2006-10-06  Nurdin Premji  <npremji@redhat.com>

	*TestProcStopped.java: Added

2006-10-05  Mark Wielaard  <mark@klomp.org>

	* LinuxX8664Syscall.java (syscallList): Add entries 256 till 279.

2006-10-05  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (transitionToRunningState): Remove syscalltracing
	argument, use task.syscallObservers.numberOfObservers().
	(WaitForContinueOrUnblock.syscallObserverAdded): Remove field.
	(WaitForUnblock.syscallObserverAdded): Likewise.
	(StartClonedTask.syscallObserverAdded): Likewise.
	(BlockedSignal.syscallObserverAdded): Likewise.
	(syscallBlockedContinue): Removed.

2006-10-05  Mark Wielaard  <mark@klomp.org>

	* Breakpoint.java (getAddress): New method.
	* BreakpointAddresses.java (getCodeObservers): Return null when
	no observers installed on the specified address.
	* Task.java (steppingBreakpoint): New package private field.
	(notifyCodeBreakpoint): Return -1 when no observers at specified
	address.
	* TaskState.java (Running.steppingBreakpoint): Removed field.
	(Running.handleTrappedEvent): Check whether trap is for one
	of our own installed breakpoints, handle it as a regular trap
	signal to process otherwise.

2006-10-05  Tim Moore  <timmore@redhat.com>

	* IsaX8664.java: New file, renamed from IsaEMT64.java
	* IsaEMT64.java: Delete.
	* LinuxX8664.java: New file, renamed from LinuxEMT64.java
	* LinuxEMT64.java: Delete.
	* Breakpoint.java, IsaFactory.java, LinuxIA32on64.java,
	TestRegMemModify.java, TestRegs.java, TestSyscallsWithAudit.java:
	Refactoring renamed classes.

2006-10-04  Nurdin Premji <npremji@redhat.com>

	* Proc.java: made observations set private and gave accessor methods.
	(addObservation): New.
	(removeObservation): New.
	(observationsIterator): New.
	(observationsSize): New.
	(requestUnblock): New.
	(toString): If newState is null (during transition), print out that we are using the oldstate.